Resolves: tdf#164226 escape mnemonic's in menu entries

Change-Id: Ia93be72d79a1660b9c9fe17d25763aec3d8a9bba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185660
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>